# OpenREALM_ROS1_Bridge

./: .gitignore  CMakeLists.txt  Dockerfile  run.sh
disasterprobe_bridge/: CMakeLists.txt  package.xml  requirements.txt
disasterprobe_bridge/launch/: disasterprobe_bridge.launch  vehicle_detection.launch
disasterprobe_bridge/src/: plan_observations.cpp
disasterprobe_bridge/src/disasterprobe_bridge/: disasterprobe_bridge.py  vehicle_detection.py
disasterprobe_bridge/srv/: PlanObservations.srv
realm_ros/: CMakeLists.txt  package.xml
realm_ros/launch/: alexa_reco.launch  disasterprobe_reco_ros.launch  lyon_reco.launch
realm_ros/profiles/alexa_reco/mosaicing/: stage_settings.yaml
realm_ros/profiles/lyon_reco/camera/: calib.yaml
realm_ros/profiles/mavic_reco/camera/: calib.yaml  calib_mavic2.yaml
realm_ros/profiles/mavic_reco/config/: georeference.yaml
realm_ros/profiles/mavic_reco/mosaicing/: stage_settings.yaml
realm_ros/profiles/mavic_reco/surface_generation/: stage_settings.yaml
realm_ros/rviz/: realm.rviz
realm_ros/src/realm_ros_lib/: stage_node.cpp
realm_rviz_plugin/: CMakeLists.txt
