<?xml version="1.0"?>
<package format="2">
  <name>disasterprobe_bridge</name>
  <version>0.0.0</version>
  <description>The disasterprobe_bridge package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anne@todo.todo">anne</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all-dev</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>realm_msgs</build_depend>
  <!-- <build_depend>realm_ros</build_depend> -->
  <build_depend>message_generation</build_depend>
  <!-- <build_depend>octomap</build_depend> -->
  <!-- <build_depend>pcl</build_depend> -->

  <!-- <build_export_depend>realm_msgs</build_export_depend> -->
  <!-- <build_export_depend>rospy</build_export_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>realm_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>octomap_ros</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <!-- <exec_depend>realm_ros</exec_depend> -->
  <exec_depend>message_runtime</exec_depend>

  <!-- <exec_depend>pcl</exec_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
